--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "type": "git",
     "url": "git://github.com/sacren/liblax.git"
   },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.5.0"
+  },
   "keywords": [],
   "author": "Jεan Sacren <sakiwit@gmail.com>",
   "license": "ISC"
