--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.2.1"
   },
   "keywords": [],
   "author": "Jεan Sacren <sakiwit@gmail.com>",
