Add build script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JS engine for Learning Analytics.",
   "main": "dist/liblax.js",
   "scripts": {
+    "build": "npm install",
     "clean": "rm -rf dist && mkdir dist",
     "installjq": "npm run clean && cp node_modules/jquery/dist/jquery.min.js dist",
     "test": "npm run installjq && grunt"
