Update scripts of package.json

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "npm install",
     "clean": "rm -rf dist && mkdir dist",
-    "installjq": "npm run clean && cp node_modules/jquery/dist/jquery.min.js dist",
-    "test": "npm run installjq && grunt"
+    "test": "npm run clean && grunt"
   },
   "repository": {
     "type": "git",
