--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.4.0",
     "grunt-contrib-watch": "^1.1.0",
-    "hoek": "^4.2.1"
+    "hoek": "^4.2.1",
+    "npm-run-all": "^4.1.3"
   },
   "keywords": [],
   "author": "Jεan Sacren <sakiwit@gmail.com>",
