--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "hoek": "^4.2.1",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "uglify-js": "^3.4.7"
   },
   "keywords": [],
   "author": "Jεan Sacren <sakiwit@gmail.com>",
