--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
     "hoek": "^4.2.1",
     "npm-run-all": "^4.1.3",
     "uglify-js": "^3.4.8"
