--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.0.0",
     "hoek": "^4.2.1",
     "npm-run-all": "^4.1.3",
+    "standard": "^12.0.0",
     "uglify-js": "^3.4.8"
   },
   "keywords": [],
